--- a/index.html
+++ b/index.html
@@ -52,7 +52,25 @@
                     </div>
                     <div class="tab-content">
                         <ul>
-                            <li></li>
+                            <li><span>Programing Laguage</span><br>C, Java, JavaScript, Python</li>
+                            <li><span>Web Laguage</span><br>HTML, CSS, JavaScript, </li>
+                            <li><span>Data Handling</span><br>Microsoft Excel</li>
+                            <li><span>Soft Skills</span><br>Team Collaboration, Problem Solving, Time Management</li>
+                        </ul>
+                    </div>
+                    <div class="tab-content">
+                        <ul>
+                            <li><span>Programing Laguage</span><br>C, Java, JavaScript, Python</li>
+                            <li><span>Web Laguage</span><br>HTML, CSS, JavaScript, </li>
+                            <li><span>Data Handling</span><br>Microsoft Excel</li>
+                            <li><span>Soft Skills</span><br>Team Collaboration, Problem Solving, Time Management</li>
+                        </ul>
+                    </div>
+                    <div class="tab-content">
+                        <ul>
+                            <li><span>Matriculation</span><br>Saraswati Sishu Vidya Mandir<br>Gosainnuagaon, Berhampur, Ganjam, Odisha, pin-760003<br>(2020-21)<br>Mark Secured-88.67%</li>
+                            <li><span>Intermediate</span><br>Khalikote Higher Secoundary School<br>Ganjam, Odisha, pin-760003<br>(2021-23)<br>Mark Secured-77%</li>
+                            <li><span>Graduation</span><br>B.Tech. in NIST University<br>Ganjam, Odisha, pin-760001<br>(2023-27)<br>Current CGPA-9.14</li>
                         </ul>
                     </div>
                 </div>
