converting files into react

--- a/index.html
+++ b/index.html
@@ -1,82 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My PortFolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- header file  -->
-     <div class="header" >
-        <div class="container">
-            <nav>
-                <img src="images/logo.jpg" class="logo">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Experience</a></li>
-                    <li><a href="#">PortFolio</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="header-text" >
-                <p>Web Designer</p>
-                <h1>Hii!!<br>I am <span>Deepak</span><br><span>Kumar Tripathy</span><br>DKT</h1>
-            </div>
-        </div>
-     </div>
-
-    <!----------------About--------------------->
-     <div class="About">
-        <div class="container">
-            <div class="row">
-                <div class="about-col1">
-                    <img src="images/user.png">
-                </div>
-                <div class="about-col2">
-                    <h1 class="sub-title">About Me!</h1>
-                    <p class="para"> 
-                        I am a enthusi and motivated Web Developer proficiency in HTML,,
-                        JavaScript, Python. Currently pursuing a B.Tech degree in Computer
-                        Science Engineering I possess a solid foundation in programming
-                        concepts web development. Proven to work collaboratively a team
-                        environment to innovative solutions and exceed. Recognized as a
-                        runner-up at HackArena 2024, demonstrating strong problem
-                       solving and coding skills.
-                    </p>
-                    <div class="tab-titles">
-                        <p class="tab-links active-link">Skills</p>
-                        <p class="tab-links">Experience</p>
-                        <p class="tab-links">Education</p>
-                    </div>
-                    <div class="tab-content">
-                        <ul>
-                            <li><span>Programing Laguage</span><br>C, Java, JavaScript, Python</li>
-                            <li><span>Web Laguage</span><br>HTML, CSS, JavaScript, </li>
-                            <li><span>Data Handling</span><br>Microsoft Excel</li>
-                            <li><span>Soft Skills</span><br>Team Collaboration, Problem Solving, Time Management</li>
-                        </ul>
-                    </div>
-                    <div class="tab-content">
-                        <ul>
-                            <li><span>Programing Laguage</span><br>C, Java, JavaScript, Python</li>
-                            <li><span>Web Laguage</span><br>HTML, CSS, JavaScript, </li>
-                            <li><span>Data Handling</span><br>Microsoft Excel</li>
-                            <li><span>Soft Skills</span><br>Team Collaboration, Problem Solving, Time Management</li>
-                        </ul>
-                    </div>
-                    <div class="tab-content">
-                        <ul>
-                            <li><span>Matriculation</span><br>Saraswati Sishu Vidya Mandir<br>Gosainnuagaon, Berhampur, Ganjam, Odisha, pin-760003<br>(2020-21)<br>Mark Secured-88.67%</li>
-                            <li><span>Intermediate</span><br>Khalikote Higher Secoundary School<br>Ganjam, Odisha, pin-760003<br>(2021-23)<br>Mark Secured-77%</li>
-                            <li><span>Graduation</span><br>B.Tech. in NIST University<br>Ganjam, Odisha, pin-760001<br>(2023-27)<br>Current CGPA-9.14</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-     </div>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/images/title.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio-DeepakKumarTripathy</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
