--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/images/title.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio-DeepakKumarTripathy</title>
+    <link rel="icon" type="image/svg+xml" href="/D-image.png" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 minimum-scale=1"
+    />
+
+    <title>DeepakKumarTripathy-Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
